syntax = "proto3";

package bancor.v1;

message Events { repeated Transaction transactions = 1; }

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  optional bytes to = 3;
  uint64 nonce = 5;
  string gas_price = 6; // uint256
  uint64 gas_limit = 7;
  uint64 gas_used = 8;
  string value = 9; // uint256
  repeated Log logs = 10;
}

// https://github.com/bancorprotocol/contracts-solidity/blob/master/solidity/contracts/converter/types/standard-pool/StandardPoolConverter.sol
// https://github.com/bancorprotocol/contracts-solidity/blob/master/solidity/contracts/converter/ConverterRegistry.sol
message Log {
  bytes address = 1;
  uint64 ordinal = 2;
  repeated bytes topics = 3;
  bytes data = 4;

  // Call metadata (only available on chains with DetailLevel: EXTENDED)
  optional Call call = 5;

  oneof log {
    Activation activation = 10;
    Conversion conversion = 11;
    ConversionFeeUpdate conversion_fee_update = 12;
    LiquidityAdded liquidity_added = 13;
    LiquidityRemoved liquidity_removed = 14;
    OwnerUpdate owner_update = 15;
    TokenRateUpdate token_rate_update = 16;
    ConverterAnchorAdded converter_anchor_added = 17;
    ConverterAnchorRemoved converter_anchor_removed = 18;
    ConvertibleTokenAdded convertible_token_added = 19;
    ConvertibleTokenRemoved convertible_token_removed = 20;
    LiquidityPoolAdded liquidity_pool_added = 21;
    LiquidityPoolRemoved liquidity_pool_removed = 22;
    SmartTokenAdded smart_token_added = 23;
    SmartTokenRemoved smart_token_removed = 24;
    NewConverter new_converter = 25;
    FeaturesAddition features_addition = 26;
    FeaturesRemoval features_removal = 27;
  }
}

// Call metadata (only available on chains with DetailLevel: EXTENDED)
message Call {
  bytes caller = 1;   // Address that made the call
  uint32 index = 2;   // Index of the call within the transaction
  uint32 depth = 3;   // Depth of the call in the call tree (0 = root)
  CallType call_type = 4;
}

enum CallType {
  CALL_TYPE_UNSPECIFIED = 0;
  CALL_TYPE_CALL = 1;
  CALL_TYPE_CALLCODE = 2;
  CALL_TYPE_DELEGATE = 3;
  CALL_TYPE_STATIC = 4;
  CALL_TYPE_CREATE = 5;
}

/// @notice Emitted when the converter is activated or deactivated
/// @param converterType The converter type
/// @param anchor The converter anchor address
/// @param activated True if the converter was activated, false if deactivated
message Activation {
  uint32 converter_type = 1; // uint16 (indexed)
  bytes anchor = 2;          // address (indexed)
  bool activated = 3;        // bool (indexed)
}

/// @notice Emitted when a conversion between two tokens occurs
/// @param sourceToken The source token address
/// @param targetToken The target token address
/// @param trader The trader address
/// @param sourceAmount The amount of source tokens
/// @param targetAmount The amount of target tokens
/// @param conversionFee The conversion fee
message Conversion {
  bytes source_token = 1;    // address (indexed)
  bytes target_token = 2;    // address (indexed)
  bytes trader = 3;          // address (indexed)
  string source_amount = 4;  // uint256
  string target_amount = 5;  // uint256
  string conversion_fee = 6; // int256
}

/// @notice Emitted when the conversion fee is updated
/// @param prevFee The previous fee
/// @param newFee The new fee
message ConversionFeeUpdate {
  uint32 prev_fee = 1; // uint32
  uint32 new_fee = 2;  // uint32
}

/// @notice Emitted when liquidity is added to the pool
/// @param provider The liquidity provider address
/// @param reserveToken The reserve token address
/// @param amount The amount of reserve tokens added
/// @param newBalance The new reserve balance
/// @param newSupply The new pool token supply
message LiquidityAdded {
  bytes provider = 1;      // address (indexed)
  bytes reserve_token = 2; // address (indexed)
  string amount = 3;       // uint256
  string new_balance = 4;  // uint256
  string new_supply = 5;   // uint256
}

/// @notice Emitted when liquidity is removed from the pool
/// @param provider The liquidity provider address
/// @param reserveToken The reserve token address
/// @param amount The amount of reserve tokens removed
/// @param newBalance The new reserve balance
/// @param newSupply The new pool token supply
message LiquidityRemoved {
  bytes provider = 1;      // address (indexed)
  bytes reserve_token = 2; // address (indexed)
  string amount = 3;       // uint256
  string new_balance = 4;  // uint256
  string new_supply = 5;   // uint256
}

/// @notice Emitted when the owner is updated
/// @param prevOwner The previous owner address
/// @param newOwner The new owner address
message OwnerUpdate {
  bytes prev_owner = 1; // address (indexed)
  bytes new_owner = 2;  // address (indexed)
}

/// @notice Emitted when the token rate is updated
/// @param token1 The first token address
/// @param token2 The second token address
/// @param rateN The rate numerator
/// @param rateD The rate denominator
message TokenRateUpdate {
  bytes token1 = 1;  // address (indexed)
  bytes token2 = 2;  // address (indexed)
  string rate_n = 3; // uint256
  string rate_d = 4; // uint256
}

/// @notice Emitted when a converter anchor is added to the registry
/// @param anchor The converter anchor address
message ConverterAnchorAdded {
  bytes anchor = 1; // address (indexed)
}

/// @notice Emitted when a converter anchor is removed from the registry
/// @param anchor The converter anchor address
message ConverterAnchorRemoved {
  bytes anchor = 1; // address (indexed)
}

/// @notice Emitted when a convertible token is added to the registry
/// @param convertibleToken The convertible token address
/// @param smartToken The smart token address
message ConvertibleTokenAdded {
  bytes convertible_token = 1; // address (indexed)
  bytes smart_token = 2;       // address (indexed)
}

/// @notice Emitted when a convertible token is removed from the registry
/// @param convertibleToken The convertible token address
/// @param smartToken The smart token address
message ConvertibleTokenRemoved {
  bytes convertible_token = 1; // address (indexed)
  bytes smart_token = 2;       // address (indexed)
}

/// @notice Emitted when a liquidity pool is added to the registry
/// @param liquidityPool The liquidity pool address
message LiquidityPoolAdded {
  bytes liquidity_pool = 1; // address (indexed)
}

/// @notice Emitted when a liquidity pool is removed from the registry
/// @param liquidityPool The liquidity pool address
message LiquidityPoolRemoved {
  bytes liquidity_pool = 1; // address (indexed)
}

/// @notice Emitted when a smart token is added to the registry
/// @param smartToken The smart token address
message SmartTokenAdded {
  bytes smart_token = 1; // address (indexed)
}

/// @notice Emitted when a smart token is removed from the registry
/// @param smartToken The smart token address
message SmartTokenRemoved {
  bytes smart_token = 1; // address (indexed)
}

/// @notice Emitted when a new converter is created
/// @param converterType The converter type
/// @param converter The converter address
/// @param owner The owner address
message NewConverter {
  uint32 converter_type = 1; // uint16 (indexed)
  bytes converter = 2;       // address (indexed)
  bytes owner = 3;           // address (indexed)
}

// StorePool - minimal pool storage type
// Primary key: converter address
message StorePool {
  bytes factory = 1; // factory address that created the converter
}

message FeaturesAddition {
  bytes address = 1;   // address (indexed)
  string features = 2; // uint256
}

message FeaturesRemoval {
  bytes address = 1;   // address (indexed)
  string features = 2; // uint256
}
